Fix some issues in manage vote page
- Scroll bar's end arrow is not visible
- Load more button causing incorrect behaviour of the vote list
- Apply filter button is clickable during fetching votes (either from load more or apply filter)

--- a/sr-webclient/src/style.css
+++ b/sr-webclient/src/style.css
@@ -81,10 +81,9 @@
 .mv-list {
   @apply mt-6 -mx-8 px-8;
   border-top: 1px solid #e5e7eb;
-  max-height: calc(100vh - 16rem);
+  max-height: calc(100vh - 20rem);
   overflow-y: auto;
   padding-top: 2rem;
-  padding-bottom: 4rem;
 }
 
 .mv-item {
